[package]
name = "octopat"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
enum-iterator = "0.6"
futures = "0.3"
opener = "0.4"
clipboard = "0.5"
colored = "1.9"
dialoguer =  "0.6"
hyper = "0.13"
keyring = "0.9"
reqwest = { version = "0.10", default_features = false, features = ["json", "rustls-tls"] }
serde = { version  = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
tokio = { version = "0.2", features = ["rt-threaded","macros", "sync"] }
url = "2.1"